<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:ads="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context="com.acecodelabo.singaporesavingsbonds.MainActivity">

<TextView
    android:id="@+id/appTitle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true"
    android:layout_marginTop="25dp"
    android:text="@string/app_title"
    android:textAlignment="center"
    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
    android:textSize="30sp" />

<TextView
    android:id="@+id/rateTitle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:layout_below="@+id/appTitle"
    android:layout_marginTop="14dp"
    android:text="@string/rate_title"
    android:textAlignment="center"
    android:textSize="24sp" />

<TextView
    android:id="@+id/rateText"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="14dp"
    android:text="@string/ave_rate"
    android:textAlignment="center"
    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
    android:textSize="30sp"
    android:layout_below="@+id/rateTitle"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true" />


<com.google.android.gms.ads.AdView
    android:id="@+id/adView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_alignParentRight="true"
    android:layout_alignParentEnd="true"
    ads:adSize="BANNER"
    ads:adUnitId="ca-app-pub-3125707977593776/7478495040"
    />

<TextView
    android:id="@+id/bondIdDescr"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:layout_below="@+id/rateText"
    android:layout_marginTop="33dp"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:text="@string/bond_id"
    android:textSize="18sp"
    android:textStyle="bold" />

<TextView
    android:id="@+id/bondId"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:layout_below="@+id/bondIdDescr"
    android:layout_marginTop="7dp"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:textAlignment="textStart"
    android:gravity="start"
    android:textSize="18sp" />

<TextView
    android:id="@+id/issueDate"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:layout_below="@+id/issueDateDescr"
    android:layout_marginTop="8dp"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:textAlignment="textStart"
    android:gravity="start"
    android:textSize="18sp" />

<TextView
    android:id="@+id/periodDescr"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:layout_below="@+id/issueDate"
    android:layout_marginTop="10dp"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:text="@string/application_period"
    android:textAlignment="textStart"
    android:gravity="start"
    android:textSize="18sp"
    android:textStyle="bold" />

<TextView
    android:id="@+id/issueDateDescr"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:layout_below="@+id/bondId"
    android:layout_marginTop="8dp"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:text="@string/issue_date"
    android:textAlignment="textStart"
    android:gravity="start"
    android:textSize="18sp"
    android:textStyle="bold" />

<TextView
    android:id="@+id/period"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:layout_below="@+id/periodDescr"
    android:layout_marginTop="12dp"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:textAlignment="textStart"
    android:gravity="start"
    android:textSize="18sp" />

<TextView
    android:id="@+id/refLink"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_above="@+id/adView"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:textAlignment="textStart"
    android:gravity="start"
    android:textStyle="bold" />

</RelativeLayout>
